--- a/components/navigation/nav-sidebar.styles.scss
+++ b/components/navigation/nav-sidebar.styles.scss
@@ -36,6 +36,10 @@
           fill: #007bff;
         }
       }
+      .signout-svg {
+        width: 28px;
+        height: 28px;
+      }
     }
   }
   .btn {
