Styled orders list

--- a/pages/_swipe.css
+++ b/pages/_swipe.css
@@ -9,7 +9,7 @@
 	Components:
 	
 	01. Navigation
-	02. Sidebar
+	02. Orders List (formerly Sidebar)
 	03. Discussions
 	04. Users
 	05. Notifications
@@ -500,9 +500,11 @@ a.dropdown-item {
   width: 28px !important;
   height: 28px !important;
 }
-/* 2. Sidebar
-==================== 
->>> Orders-page.component.tsx 
+/* 2. Orders List
+==================== */
+.orders-list .top form .eva {
+  fill: #bdbac2;
+}
 
 /* 3. Discussions
 ====================
