--- a/components/list/orders-list.tsx/order/order.style.scss
+++ b/components/list/orders-list.tsx/order/order.style.scss
@@ -46,10 +46,19 @@
         margin-bottom: 10px;
       }
 
-      img {
+      .status-number {
+        display: inline-block;
         width: 42px;
         height: 42px;
-        border-radius: 100%;
+        line-height: 42px;
+        font-size: 20px;
+        font-weight: 600;
+        color: #fff;
+        text-align: center;
+        background-color: #56b48c;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
       }
 
       h5 {
