Added functionality to archive button

--- a/components/list/orders-list.tsx/orders-list.styles.scss
+++ b/components/list/orders-list.tsx/orders-list.styles.scss
@@ -45,6 +45,7 @@ $grey: #bdbac2;
           padding: 8px 0;
           color: $grey;
           border-radius: 6px;
+          cursor: pointer;
         }
       }
     }
