Fixed styling for orders-list and order components

--- a/components/list/orders-list.tsx/orders-list.styles.scss
+++ b/components/list/orders-list.tsx/orders-list.styles.scss
@@ -70,4 +70,11 @@ $grey: #bdbac2;
       margin-bottom: 0;
     }
   }
+  .order {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    padding-left: 0;
+    list-style: none;
+    margin-bottom: 0;
+  }
 }
