--- a/components/list/orders-list.tsx/orders-list.styles.scss
+++ b/components/list/orders-list.tsx/orders-list.styles.scss
@@ -62,6 +62,7 @@ $grey: #bdbac2;
       margin-bottom: 0;
       & + .btn {
         margin-left: 15px;
+        fill: #bdbac2;
       }
     }
     hr {
