Hooked up create new order button with action/reducer

--- a/components/list/orders-list.tsx/orders-list.styles.scss
+++ b/components/list/orders-list.tsx/orders-list.styles.scss
@@ -63,6 +63,9 @@ $grey: #bdbac2;
       & + .btn {
         margin-left: 15px;
         fill: #bdbac2;
+        &:hover {
+          fill: $blue;
+        }
       }
     }
     hr {
