--- a/components/list/orders-list.tsx/orders-list.styles.scss
+++ b/components/list/orders-list.tsx/orders-list.styles.scss
@@ -80,6 +80,10 @@ $grey: #bdbac2;
     padding-left: 0;
     list-style: none;
     margin-bottom: 0;
+    .temp-placeholder {
+      color: $grey;
+      font-style: italic;
+    }
   }
 }
 
