Implemented string processing and word wraps for order list component

--- a/components/list/orders-list.tsx/order/order.style.scss
+++ b/components/list/orders-list.tsx/order/order.style.scss
@@ -23,6 +23,7 @@ li {
 
       p {
         color: #212529;
+        white-space: pre-wrap;
       }
     }
 
@@ -46,6 +47,7 @@ li {
       color: #212529;
       margin-right: auto;
       margin-bottom: 0;
+      white-space: pre-wrap;
     }
 
     span {
