--- a/components/list/orders-list.tsx/temp-order/temp-order.styles.scss
+++ b/components/list/orders-list.tsx/temp-order/temp-order.styles.scss
@@ -25,6 +25,7 @@ li {
 
       p {
         color: #212529;
+        white-space: pre-wrap;
       }
     }
 
@@ -48,6 +49,7 @@ li {
       color: #212529;
       margin-right: auto;
       margin-bottom: 0;
+      white-space: pre-wrap;
     }
 
     span {
