Changed styling for orders list

--- a/components/list/orders-list.tsx/orders-list.styles.scss
+++ b/components/list/orders-list.tsx/orders-list.styles.scss
@@ -71,7 +71,7 @@ $grey: #bdbac2;
     hr {
       -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
-      margin-bottom: 0;
+      margin: 1rem 0 0 0;
     }
   }
   .order {
