--- a/components/list/orders-list.tsx/order/order.style.scss
+++ b/components/list/orders-list.tsx/order/order.style.scss
@@ -11,18 +11,15 @@ li {
 
   a {
     display: block;
-    padding: 25px 0;
-    border-bottom: 2px solid #fbfbfb;
+    padding: 15px 10px;
 
     &:hover {
-      border-bottom: 2px solid #007bff;
+      background: #e9ebeb;
     }
 
     &.active {
-      border-bottom: 2px solid #007bff;
-
       p {
-        color: #212529;
+        color: #000;
         white-space: pre-wrap;
       }
     }
@@ -40,6 +37,9 @@ li {
       margin-bottom: 10px;
     }
 
+    p {
+      color: #454545;
+    }
     h5 {
       font-size: 16px;
       font-weight: 600;
@@ -54,7 +54,7 @@ li {
       font-size: 15px;
       font-weight: 500;
       white-space: nowrap;
-      color: #bdbac2;
+      color: #8c8d8d;
       margin-left: 30px;
     }
   }
