Unified order component styles into one file

--- a/components/list/orders-list.tsx/order/order.styles.scss
+++ b/components/list/orders-list.tsx/order/order.styles.scss
@@ -1,3 +1,5 @@
+$grey: #bdbac2;
+
 li {
   -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
@@ -57,6 +59,10 @@ li {
       white-space: nowrap;
       color: #8c8d8d;
       margin-left: 30px;
+    }
+    .temp-placeholder {
+      color: $grey !important;
+      font-style: italic;
     }
   }
 }
