--- a/components/viewer/viewer.styles.scss
+++ b/components/viewer/viewer.styles.scss
@@ -1,3 +1,7 @@
+$color_1: #fff;
+$color_2: #007bff;
+$color_3: #bdbac2;
+
 .viewer {
   .item {
     display: -ms-flexbox;
@@ -7,6 +11,55 @@
 
     > .content {
       flex: 1;
+    }
+  }
+}
+
+.new-order {
+  border: none;
+  border-radius: 6px;
+}
+.new-order-header {
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 25px 30px;
+  border-bottom: none;
+  justify-content: space-between;
+  h5 {
+    font-weight: 600;
+    color: #000;
+    margin-bottom: 0;
+  }
+  .round {
+    padding: 0;
+    fill: $color_3;
+    &:hover {
+      fill: $color_2;
+    }
+  }
+}
+.new-order-body {
+  padding: 0;
+  background: #fbfbfb;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+
+  .details {
+    padding: 15px 30px 0;
+  }
+}
+.new-order-footer {
+  padding: 0px;
+  background: #fbfbfb;
+  border: none;
+  .primary {
+    padding: 14px 0;
+  }
+  button {
+    &:disabled:hover {
+      opacity: 0.65;
+      background: $color_2;
     }
   }
 }
